Improvement and fixes